# champr

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: opgg-crawl.yml  scheduled-publish.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs  settings.rs
crates/app/ui/: app.slint
crates/lcu/: Cargo.toml  build.rs
crates/lcu/src/: builds.rs  cmd.rs  lcu_api.rs  lib.rs  web.rs
crates/server/: Cargo.toml  Dockerfile
crates/server/migrations/: 0001_init.sql
crates/server/src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
