[package]
name = "champr"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
lcu = { path = "../lcu" }
tokio = { version = "1.44.0", features = ["full"] }
slint = "1.15"
kv-log-macro = "1.0.7"
femme = "2.2.1"
anyhow = "1.0.86"
image = { version = "0.25.2", default-features = false, features = ["png"] }
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5"

[build-dependencies]
slint-build = "1.15"
